--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -14,6 +14,22 @@
                 allowfullscreen>
                 </iframe>
             </div>
-            <
         </div>
+        <div class="row">
+            <h5>コメント</h5>
+            <% @comments.each do |comment| %>
+                <div class="col">
+                    <p><%= comment.content %></p>
+                </div>
+            <% end %>
+            <%= form_for [@song, @comment] do |form| %>
+                <div>
+                    <%= form.text_field :content %>
+                </div>
+                <div>
+                    <%= form.submit 'コメント' %>
+                </div>
+            <% end %>
+        </div>
+        
 </div>
