--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,15 +1,13 @@
 <header>
-    <div class="container">
+    <div class="header">
         <nav class="navbar navbar-expand-sm navbar-light">
-            <a href="" class="navbar-brand">LOGO</a>
+            <h1><%= link_to 'Dayz Musiq', songs_path %></h1>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="menu" class="collapse navbar-collapse">
+            <div id="menu" class="collapse navbar-collapse text-lefts">
                 <ul class="navbar-nav">
                     <% if user_signed_in? %>
-                    
-                    <li class="nav-item"><%= link_to 'プロフィール変更', edit_user_registration_path, class: 'nav-link' %></li>
                     <li class="nav-item"><%= link_to 'ログアウト', destroy_user_session_path, method: :get, class: 'nav-link' %></li>
                 <% else %>
                     <li class="nav-item"><%= link_to '新規作成', new_user_registration_path, class: 'nav-link' %></li>
