--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,35 +1,40 @@
-<div class="container">
-    <% color = %w|#f3cbdd #d1c1f1 #b5f1d2| %>
-        <div class="row" style="background-color: <%= color.sample %>";>
+<main>
+    <div class="container">
+        <div class="row song-bg">
             <div class="col-sm-4 text-center">
                 <h2 class="song-title"><%= @song.song_title %></h2>
-                <p>BPM : <%= @song.song_bpm %></p>
-                <p><%= @song.song_time %></p>
-                <p><%= @song.song_genre %></p>
-                <p><%= button_to 'Download', download_song_path(@song.song_id), method: :get, class: 'btn btn-info' %></p>
+                <div>
+                    <p>BPM : <%= @song.song_bpm %></p>
+                    <p><%= @song.song_time %></p>
+                    <p><%= @song.song_genre %></p>
+                    <p><%= button_to 'Download', download_song_path(@song.song_id), method: :get, class: 'btn btn-info w-75' %></p>
+                </div>
             </div>
-            <div class="col-sm-8 youtube-wrapper">
-                <iframe src="https://www.youtube.com/embed/<%= @song.youtube_video_id %>" frameborder="0" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
+            <div class="col-sm-8 embed-responsive embed-responsive-4by3">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/<%= @song.youtube_video_id %>" frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
+            </div>
+        </div>
+        <div class="row comment">
+            <div class="col">
+                <% if user_signed_in? %>
+                    <%= form_for [@song, @comment] do |form| %>
+                        <p><%= form.text_field :content, class:'comment-box' %></p>
+                        <p><%= form.submit 'コメント' %></p>
+                    <% end %>
+                <% end %>
             </div>
         </div>
         <div class="row">
             <h5>コメント</h5>
-            <% @comments.each do |comment| %>
-                <div class="col">
-                    <p><%= comment.content %></p>
-                </div>
-            <% end %>
-            <%= form_for [@song, @comment] do |form| %>
-                <div>
-                    <%= form.text_field :content %>
-                </div>
-                <div>
-                    <%= form.submit 'コメント' %>
-                </div>
-            <% end %>
+            <div class="col">
+                <% @comments.each do |comment| %>
+                        <ul>
+                            <li><%= comment.content %></li>
+                        </ul>
+                <% end %>
+            </div>
         </div>
-        
-</div>
+    </div>
+</main>
