--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,18 @@
 <div class="container">
-  <h2>パスワードの再発行</h2>
+  <div class="text-center m-4">
+    <h3>パスワードの再発行</h3>
+  </div>
   
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= devise_error_messages! %>
   
-    <div class="form-group">
+    <div class="form-group mt-3 mb-3">
       <%= f.label :email, 'メールアドレス' %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", style: "margin-bottom: 10px;" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
     </div>
   
     <div class="actions">
-      <%= f.submit "パスワードの再発行", class: "btn btn-secondary " %>
+      <%= f.submit "パスワードの再発行", class: "btn btn-info " %>
     </div>
   <% end %>
 </div>
