--- a/app/views/shared/_section.html.erb
+++ b/app/views/shared/_section.html.erb
@@ -1,21 +1,39 @@
-<div class="service-container">
-    <h1 class="service-title text-center">Service</h1>
-    <div class="row">
-        <div class="col-sm-6">
-            <h2>Free Download</h2>
-            <ul>
-                <li>YouTubeなどの動画BGMとしてお使い下さい。</li>
-                <li>使用の際は必ずDayz MusiqのYouTubeまたは<br>instagramアカウントのURLを概要欄にて紹介して下さい。</li>
-            </ul>
-        </div>
-        <div class="col-sm-6">
-            <h2>SongWriting</h2>
-            <ul>
-                <li>あなただけのオリジナルソングを提供します。</li>
-                <li>インストゥルメント・歌モノどちらも可能です。</li>
-                <li>動画のオープニングやエンディング曲としてお使い頂けます。</li>
-                <li>ご希望の方は【お問い合わせ】からご連絡ください。</li>
-            </ul>
+<div>
+    <div class="container-fluid">
+        <div class="service-title mb-5 text-center"><h1>Service info</h1></div>
+        <div class="card-container">
+            <div class="card-deck mb-3 ml-3 text-center">
+                <div class="card shadow-lg">
+                    <div class="card-header">
+                        <h3 class="my-0 font-weight-normal">SongWriting</h3>
+                    </div>
+                    <div class="card-body shadowd">
+                        <ul class="card-list mt-3 mb-4">
+                            <li><span>オリジナルソングを提供します</span></li>
+                            <br>
+                            <li><span>インストゥルメント・ボーカル有どちらも可能です</span></li>
+                            <br>
+                            <li><span>ご希望の方は<a href="https://twitter.com/dayzmusi9">TwitterのDM</a>にてご連絡ください</span></li>
+                        </ul>
+                    </div>
+                </div>   
+            </div>
+            <div class="card-deck mb-3 mr-3 text-center">
+                <div class="card shadow-sm">
+                    <div class="card-header">
+                        <h3 class="my-0 font-weight-normal">Free Download</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="card-list mt-3 mb-4">
+                            <li><span>YouTuber・instagramerのためのサービスです</span></li>
+                            <br>
+                            <li><span>YouTubeなどの動画BGMとしてお使い頂けます</span></li>
+                            <br>
+                            <li><span>使用の際はDayz MusiqのYouTube or instagramアカウントURLをご紹介下さい</span></li>
+                        </ul>
+                    </div>
+                </div>   
+            </div>
         </div>
     </div>
 </div>
