--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "songs";
 
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -14,7 +15,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	padding: 0;
 	border: 0;
 	outline: 0;
-	font-size: 100%;
 	vertical-align: baseline;
 	background: transparent;
 }
@@ -22,4 +22,11 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 html, body, .container {
   width: 100%;
   height: 100%;
+  font-family: serif;
+}
+
+.row {
+    max-width: 1000px;
+    margin: 3% auto;
+    padding: 30px;
 }
