--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,19 @@
 <div class="container">
-  <h2 class="text-center">新規登録</h2>
+  <div class="text-center m-4">
+    <h3>新規登録</h3>
+  </div>
   
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= devise_error_messages! %>
   
     <div class="form-group">
-      <%= label_tag 'profile[name]', 'ユーザー名' %><br />
-      <%= text_field_tag 'profile[name]', '', class: "form-control" %>
+      <%= f.label :username, 'ユーザー名' %>
+      <%= f.text_field :username, autofocus: true, class: "form-control" %>
     </div>
   
     <div class="form-group">
       <%= f.label :email, 'メールアドレス' %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      <%= f.email_field :email, autofocus: true, class: "form-control" %>
     </div>
   
     <div class="form-group">
@@ -19,18 +21,16 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %>文字以上入力してください)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
     </div>
   
     <div class="form-group">
       <%= f.label :password_confirmation, 'パスワードの確認' %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
     </div>
   
     <div class="actions">
       <%= f.submit "新規登録", class: "btn btn-primary" %>
     </div>
   <% end %>
-  
-  <%= render "devise/shared/links" %>
 </div>
