--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -6,21 +6,22 @@
     </div>
     <div class="container">
         <% @songs.each do |song| %> 
-            <div class="row song-bg">
-                <div class="col-sm-4 text-center">
+            <div class="row song-content">
+                <div class="col-4 text-center">
                     <h2 class="song-title"><%= song.song_title %></h2>
                     <p>BPM : <%= song.song_bpm %></p>
                     <p><%= song.song_time %></p>
                     <p><%= song.song_genre %></p>
-                    <p><%= link_to "GET THIS TRACK ♪", song_path(song.song_id) %></p>
+                    <p class="song-link"><%= link_to "GET THIS TRACK ♪", song_path(song.song_id) %></p>
                 </div>
-                <div class="col-sm-8 embed-responsive embed-responsive-4by3">
+                <div class="col-8 embed-responsive embed-responsive-4by3">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/<%= song.youtube_video_id %>" frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                     </iframe>
                 </div>
             </div>
         <% end %>
+        <%= paginate @songs %>
     </div>
     <%= render 'shared/section' %>
 </main>
