--- a/app/views/shared/_section.html.erb
+++ b/app/views/shared/_section.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="service-title mb-5 text-center"><h1>Service info</h1></div>
         <div class="card-container">
-            <div class="card-deck mb-3 ml-3 text-center">
+            <div class="card-deck m-2 text-center">
                 <div class="card shadow-lg">
                     <div class="card-header">
                         <h3 class="my-0 font-weight-normal">SongWriting</h3>
@@ -18,7 +18,7 @@
                     </div>
                 </div>   
             </div>
-            <div class="card-deck mb-3 mr-3 text-center">
+            <div class="card-deck m-2 text-center">
                 <div class="card shadow-sm">
                     <div class="card-header">
                         <h3 class="my-0 font-weight-normal">Free Download</h3>
