画像パスの修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="動画で使っていただけるBGMをダウンロードできます。" />
     
     <title>Dayz Musiq</title>
-    <link rel="icon" href="/assets/dayz_image2.jpg" sizes="64x64" type="image/jpg" />
+    <link rel="icon" href="<%= asset_path "dayz_image2.jpg" %>" sizes="64x64" type="image/jpg" />
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
