--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,9 +10,9 @@
             </div>
             <div class="navbar-sns">
                 <ul>
-                <li class="nav-sns"><a href="https://www.youtube.com/channel/UCWYYEIjZH2KsoNX9_RtOWjw" class="nav-link"><img src="/assets/youtube_image.png" class="nav-image"></a></li>
-                <li class="nav-sns"><a href="https://www.instagram.com/dayzmusi9/" class="nav-link"><img src="/assets/instagram_image.png" class="nav-image"></a></li>
-                <li class="nav-sns"><a href="https://twitter.com/dayzmusi9" class="nav-link"><img src="/assets/Twitter_image.png" class="nav-image"></a></li>
+                <li class="nav-sns"><a href="https://www.youtube.com/channel/UCWYYEIjZH2KsoNX9_RtOWjw" class="nav-link"><img src="<%= asset_path "youtube_image.png" %>" class="nav-image"></a></li>
+                <li class="nav-sns"><a href="https://www.instagram.com/dayzmusi9/" class="nav-link"><img src="<%= asset_path "instagram_image.png" %>" class="nav-image"></a></li>
+                <li class="nav-sns"><a href="https://twitter.com/dayzmusi9" class="nav-link"><img src="<%= asset_path "Twitter_image.png" %>" class="nav-image"></a></li>
             </ul>
             </div>
             <button class="navbar-toggler ml-1 p-1" data-toggle="collapse" data-target="#menu">
