[fix] レイアウト修正

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -12,7 +12,7 @@
                     <p>BPM : <%= song.song_bpm %></p>
                     <p><%= song.song_time %></p>
                     <p><%= song.song_genre %></p>
-                    <p class="song-link"><%= link_to "GET THIS TRACK ♪", song_path(song.id) %></p>
+                    <%= button_to 'GET♪', song_path(song.id), method: :get, class: 'getTrack-button btn' %>
                 </div>
                 <div class="col-8 embed-responsive embed-responsive-4by3">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/<%= song.youtube_video_id %>" frameborder="0" 
