--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,7 +1,7 @@
 <main>
     <%= flash[:alert] %>
     <div class="container">
-        <div class="row song-content">
+        <div class="row no-gutters song-content">
             <div class="col-4 text-center">
                 <h2 class="song-title"><%= @song.song_title %></h2>
                 <p>BPM : <%= @song.song_bpm %></p>
