--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -39,15 +39,11 @@
 .main-header, .overlay:before {
     background: image-url('dayz_image1.jpg') no-repeat;
     background-size: cover;
-    background-position: 0 -21px;
-}
-
-.header-title {
-    font-size: 4.5vw;
+    background-position: top;
 }
 
 .main-header {
-    padding:15%;
+    padding: 11% 5% 31%;
 }
 
 .overlay {
@@ -55,7 +51,7 @@
     margin: 0px auto;
     max-width: 768px;
     overflow: hidden;
-    padding: 20px;
+    padding: 2.5%;
     position: relative;
     border-radius: 10px;
     color: white;
@@ -69,7 +65,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        filter: blur(20px);
+        filter: blur(11px);
         z-index: -1;
     }
 }
@@ -97,21 +93,27 @@
     }
 }
 
+.container > .song-content{
+    padding: 20px 15px 15px 0;
+}
+
 .song-title {
     color: #fff;
-    font-size: 2.7vw;
     padding-bottom: 8%;
 }
 
 .song-content p {
     color: #fff;
-    font-size: 1.6vw;
     line-height: 30px;
     padding-bottom: 2%;
 }
 
-.song-link {
-    margin-top: 10%;
+.getTrack-button {
+    background-color: #bf7979;
+    color: #fff;
+    font-size: 1.5vw;
+    margin-top: 20%;
+    width: 86%;
 }
 
 .download-button {
@@ -125,38 +127,67 @@
 }
 
 
-// _section.html.erbレイアウト
+// 文字サイズ
 @media screen and (min-width: 992px) { 
+    .header-title {
+        font-size: 4.5vw;
+    }
+    .song-title {
+        font-size: 2.7vw;
+    }
+    .song-content p {
+        font-size: 1.6vw;;
+    }
     .service-title h1, .card-header h3 {
-        font-size: 3.0vw;
+        font-size: 3.6vw;
     }
     .card-header h3 {
-        font-size: 2.2vw;
+        font-size: 2.0vw;
     }
 }
 
 @media screen and (max-width: 991.98px) { 
+    .header-title {
+        font-size: 5.0vw;
+    }
+    .song-title {
+        font-size: 3.1vw;
+    }
+    .song-content p {
+        font-size: 2.2vw;;
+    }
     .service-title h1 {
-        font-size: 3.5vw;
+        font-size: 4.5vw;
     }
     .card-header h3 {
-        font-size: 3.0vw;;
+        font-size: 3.3vw;
     }
 }
 
 @media screen and (max-width: 576px) { 
+    .header-title {
+        font-size: 5.8vw;
+    }
+    .song-content p {
+        font-size: 2.6vw;;
+    }
     .service-title h1 {
-        font-size: 5.0vw;
+        font-size: 6.7vw;
     }
     .card-header h3 {
-        font-size: 4.5vw;
+        font-size: 5.4vw;
     }
 }
 
+// _section.html.erbレイアウト
 .container-fluid {
     background-color: #e0d2d0;
     padding-top: 50px;
     padding-bottom: 30px;
+}
+
+.service-title h1 {
+    font-weight: bold;
 }
 
 .card-container {
