[fix] レイアウト修正

--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -138,11 +138,11 @@
     .song-content p {
         font-size: 1.6vw;;
     }
-    .service-title h1, .card-header h3 {
+    .service-title h1 {
         font-size: 3.6vw;
     }
     .card-header h3 {
-        font-size: 2.0vw;
+        font-size: 2.2vw;
     }
 }
 
